after second reading
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@8368 4525493e-7705-40b1-a816-d608a930855b

--- a/2013/elegent/elegent.tex
+++ b/2013/elegent/elegent.tex
@@ -119,7 +119,7 @@ elastic nucleon-nucleon scattering \sep non-perturbative QCD models \sep nucleon
 
 \section{Introduction}\label{s:inc}
 
-The elastic scattering of nucleons (i.e.~protons or anti-protons) may look like their simplest interaction, however, it still presents a challenge for theory to describe it. The complication may be seen in the fact that the coupling constant of quantum chromodynamics (QCD) becomes large at low energy scales (low momentum transfer is characteristic for the elastic scattering of nucleons). Consequently, one can not apply the straight-forward perturbative calculations like in quantum electrodynamics (QED) for example. Instead of describing the elastic scattering from first principles, many model descriptions have been developed. These more or less QCD-motivated models are often built on Regge theory and/or eikonal formalism grounds. As there are new experimental efforts at the LHC \cite{totem,alfa}, we have felt it useful to collect some of the most prominent models in an easily accessible library that could be used for various applications (C++ code, comparison to data, Monte-Carlo generator, etc). This became the core of the Elegent (ELastic Event GENeraTor) package.
+The elastic scattering of nucleons (i.e.~protons or anti-protons) may look like their simplest interaction, however, it still presents a challenge for theory to describe it. The complication may be seen in the fact that the coupling constant of quantum chromodynamics (QCD) becomes large at low energy scales (low momentum transfer is characteristic for elastic scattering of nucleons). Consequently, one can not apply the straight-forward perturbative calculations like in quantum electrodynamics (QED) for example. Instead of describing the elastic scattering from first principles, many model descriptions have been developed. These more or less QCD-motivated models are often built on Regge theory and/or eikonal formalism grounds. As there are new experimental efforts at the LHC \cite{totem,alfa}, we have felt it useful to collect some of the most prominent models in an easily accessible library that could be used for various applications (comparison to data, predictions for new measurements, Monte-Carlo generator, etc). This became the core of the Elegent (ELastic Event GENeraTor) package.
 
 Out of the three fundamental forces relevant for particle interactions only the strong and electromagnetic forces are important for elastic scattering of nucleons. The four-momentum transfer squared, $t$, typical for the elastic scattering is $|t| \lesssim 10\un{GeV^2}$. Compared to that, the carriers of the weak forces are much heavier, thus the influence of the weak interaction is negligible. Some models of the strong interaction (traditionally called {\em hadronic models}) are described in Section \ref{s:had mod}, the electromagnetic (traditionally called {\em Coulomb}) interaction is discussed in Section \ref{s:coul mod}. Some approaches to evaluate the interference effects between the hadronic and Coulomb forces are reviewed in Section \ref{s:int mod}.
 
@@ -129,29 +129,33 @@ Although nucleons are spin $1/2$ particles, there are indications that for forwa
 
 \section{Hadronic models}\label{s:had mod}
 
-The following models are currently implemented in the Elegent package, more models are likely to be added in future. For a more detailed model review see \cite[section 1.1]{jan_thesis} or \cite[section 4]{dremin13}.
+The following models are currently implemented in the Elegent package, more models are likely to be added in future. For a more detailed model review we refer the reader to \cite[section 1.1]{jan_thesis} or \cite[section 4]{dremin13}.
 
 \subsection{The model of Block et al.}
 
-This model \cite{bh99,block06} is a QCD-inspired model formulated in eikonal formalism. The eikonal receives four contributions due to quark-quark, quark-gluon, gluon-gluon interactions and an odderon exchange. The latter is responsible for the difference between $\rm pp$ and $\rm \bar p p$ scattering and is negligible at LHC and higher energies. Each of the eikonal contributions is factorised into energy dependence term (proportional to the integral cross-section of a given sub-process) and impact-parameter profile. All four profiles have the same form but are scaled with a parameter reflecting the areas occupied by quarks and gluons in the nucleon. The gluon-gluon cross-section is modelled after QCD, adopting a gluon distribution function that behaves as $1/x^{1+\epsilon}$ at low momentum fractions $x$. It is this high soft-gluon content that is responsible for the cross-section rise with energy.
+This QCD-inspired model is formulated in eikonal formalism \cite{bh99,block06}. The eikonal receives four contributions due to quark-quark, quark-gluon, gluon-gluon interactions and an odderon exchange. The latter is responsible for the difference between $\rm pp$ and $\rm \bar p p$ scattering and is negligible at LHC and higher energies. Each of the eikonal contributions is factorised into energy dependence term (proportional to the integral cross-section of a given sub-process) and impact-parameter profile. All four profiles have the same form but are scaled with a parameter reflecting the areas occupied by quarks and gluons in the nucleon. The gluon-gluon cross-section is modelled after QCD, adopting a gluon distribution function that behaves as $1/x^{1+\epsilon}$ at low momentum fractions $x$. It is this high soft-gluon content that is responsible for the cross-section rise with energy.
 
 The model is implemented as class \class{BHModel} in the library source code, using parameter values from publication \cite{block06}. Several inconsistencies in the reference papers \cite{bh99,block06} are clarified in the online documentation \cite[Wiki section, page HMBlock]{elegent}.
 
 \subsection{The model of Bourrely et al.}
 
-This model \cite{bsw79,bsw84,bsw03,bsw11} is also formulated within eikonal description. The eikonal includes two terms corresponding to two scattering mechanisms: pomeron and reggeon exchange. The pomeron term is factorised into a product of two functions, one depending on centre-of-mass energy, $\sqrt s$, and one on impact parameter, $b$. The energy dependence is deduced from asymptotic quantum field theory behaviour \cite{wu70}. The impact-parameter profile of the pomeron exchange is derived by assuming similar distributions of electric charge and nuclear matter in the nucleon. The charge distribution is extracted from electromagnetic form factor and is further modified by a slowly varying function in order to get the complete profile function. The reggeons considered in this model include $\rm A_2$, $\rho$ and $\omega$. The trajectories are described with a traditional parametrisation with $s^{\alpha - 1}$ energy dependence and $\e^{-bt}$ momentum-transfer dependence. The reggeon contribution is responsible for the $\rm pp$ and $\rm \bar pp$ difference at low energies and is negligible at LHC and higher energies.
+This model \cite{bsw79,bsw84,bsw03,bsw11} is also formulated within eikonal description. The eikonal includes two terms corresponding to two scattering mechanisms: pomeron and reggeon exchange.
 
-The model is implemented as class \class{BSWModel} in the library source code, using parameter values from publication \cite{bsw03}. A number of ambiguities and inconsistencies in the above quoted reference papers are discussed in the online documentation \cite[Wiki section, page HMBourrely]{elegent}.
+The pomeron term is factorised into a product of two functions, one depending on centre-of-mass energy, $\sqrt s$, and one on impact parameter, $b$. The energy dependence is deduced from asymptotic quantum field theory behaviour \cite{wu70}. The impact-parameter profile of the pomeron exchange is derived by assuming similar distributions of electric charge and nuclear matter in the nucleon. The charge distribution is extracted from electromagnetic form factor and is further modified by a slowly varying function in order to get the complete profile function.
+
+The reggeons considered in this model include $\rm A_2$, $\rho$ and $\omega$. Their contributions are described with a traditional parametrisation with $s^{\alpha - 1}$ energy dependence ($\alpha(t)$ refers to the Regge trajectory) and $\e^{-bt}$ momentum-transfer dependence. The reggeon contribution is responsible for the $\rm pp$ and $\rm \bar pp$ difference at low energies and is negligible at LHC and higher energies.
+
+The model is implemented as class \class{BSWModel} in the library source code, using parameter values from publication \cite{bsw03}. Several ambiguities and inconsistencies in the above quoted reference papers are discussed in the online documentation \cite[Wiki section, page HMBourrely]{elegent}.
 
 \subsection{The model of Islam et al.}
 
-The authors picture the proton in an effective quantum field theory model (gauged linear sigma model) \cite{islam06}. The proposed soliton solution has a mass comparable to the proton and divides the proton to two distinct layers: an outer cloud of quark-antiquark condensate and an inner core of topological charge. Later on \cite{islam05}, a third, the inner-most layer has been added: a valence-quark bag. These three layers give rise to three mechanisms contributing to elastic proton-proton scattering, each being dominant at a different region of $t$. At the lowest $|t|$ it is the diffraction scattering originating from a glancing overlapping of the outer clouds \cite{islam84,islam87}, at medium $|t|$ the core-core scattering \cite{islam06} and at high $|t|$ the valence-quark scattering \cite{islam05,islam09}. The diffraction scattering is described in impact-parameter picture using a Fermi profile function. As a consequence of the underlying quantum field theory model, the core-core scattering is mediated by the $\omega$ meson behaving as an elementary particle. The corresponding amplitude thus contains a Feynman propagator and a form factor ensuring an exponential fall off at higher $|t|$ values. Regarding the valence-quark scattering, the model comes with two alternative mechanisms: interaction via a BFKL gluon ladder (denoted {\em hard pomeron} variant, HP) \cite{islam05} or interaction mediated by low-$x$ gluons surrounding the valence quark (variant {\em low-x gluons}, LxG) \cite{islam09}.
+The authors picture the nucleon in an effective quantum field theory model (gauged linear sigma model) \cite{islam06}. The proposed soliton solution has a mass comparable to the nucleon and divides the nucleon to two distinct layers: an outer cloud of quark-antiquark condensate and an inner core of topological charge. Later on \cite{islam05}, a third, the inner-most layer has been added: a valence-quark bag. These three layers give rise to three mechanisms contributing to elastic nucleon-nucleon scattering, each being dominant at a different region of $t$. At the lowest $|t|$ it is the diffraction scattering originating from a glancing overlapping of the outer clouds \cite{islam84,islam87}, at medium $|t|$ the core-core scattering \cite{islam06} and at high $|t|$ the valence-quark scattering \cite{islam05,islam09}. The diffraction scattering is described in impact-parameter picture using a Fermi profile function. As a consequence of the underlying quantum field theory model, the core-core scattering is mediated by the $\omega$ meson behaving as an elementary particle. The corresponding amplitude thus contains a Feynman propagator and a form factor ensuring an exponential fall off at higher $|t|$ values. Regarding the valence-quark scattering, the model comes with two alternative mechanisms: interaction via a BFKL gluon ladder (denoted {\em hard pomeron} variant, HP) \cite{islam05} or interaction mediated by low-$x$ gluons surrounding the valence quark (variant {\em low-x gluons}, LxG) \cite{islam09}.
 
 The model is implemented as class \class{IslamModel} in the library source code, using parameter values from publication \cite{islam06} and \cite{islam09} for the LxG extension.
 
 \subsection{The model of Jenkovszky et al.}
 
-In this model \cite{jenkovszky11} the elastic scattering of nucleons is attributed to $t$-channel exchanges of a pomeron, an odderon and reggeons $\rm f$ and $\omega$. The reggeon-exchange amplitudes have the traditional form with $s^{\alpha - 1}$ energy dependence and residua $\e^{-bt}$ and are negligible at LHC and higher energies. The pomeron and odderon amplitudes have a more complicated form arising from the assumed double Regge pole nature of the pomeron \cite[section 2]{jenkovszky86}. Moreover, the model comes with several parametrisations of the pomeron Regge trajectory $\alpha(t)$. The linear parametrisation is discussed in the greatest detail in the publication and is the only implemented in Elegent at the moment. 
+In this approach, the elastic scattering of nucleons is attributed to $t$-channel exchanges of a pomeron, an odderon and reggeons $\rm f$ and $\omega$ \cite{jenkovszky11}. The reggeon-exchange amplitudes have the traditional form with $s^{\alpha - 1}$ energy dependence and residua $\e^{-bt}$ and are negligible at LHC and higher energies. The pomeron and odderon amplitudes have a more complicated form arising from the assumed double Regge pole nature of the pomeron \cite[section 2]{jenkovszky86}. Moreover, the model comes with several parametrisations of the pomeron Regge trajectory $\alpha(t)$. The linear parametrisation is discussed in the greatest detail in the publication and is the only implemented in Elegent at the moment. 
 
 The model is implemented as class \class{JenkovszkyModel}, using parameter values from publication \cite{jenkovszky11}.
 
@@ -178,7 +182,7 @@ The QED framework can naturally account for the nucleon structure and its anomal
 \end{equation}
 where $\alpha$ is the fine-structure constant.
 
-In the Elegent package, the user can choose (via {\tt CoulombInterference::\discretionary{}{}{}FFType}) between several form factor parametrisations. They account for increasing amount of experimental data as well as progressing theoretical development. One of the first publications is by Hofstadter \cite{hofstadter58} who used a dipole parametrisations. This was later updated by Borkowski et al.~\cite{borkowski74,borkowski75} parametrising both form factors by a sum of four poles. Further publications Kelly \cite{kelly04}, Arrington et al.~\cite{arrington07} and Puckett \cite{puckett10} use a parametrisation satisfying dimensional scaling at high $|t|$. A graphical comparison of these form factors is available in \cite[Figure~1.7]{jan_thesis}.
+In the Elegent package, the user can choose (via {\tt CoulombInterference::\discretionary{}{}{}ffType}) between several form factor parametrisations. They gradually account for increasing amount of experimental data as well as progressing theoretical development. One of the first publications is by Hofstadter \cite{hofstadter58} who used a dipole parametrisation. This was later updated by Borkowski et al.~\cite{borkowski74,borkowski75} parametrising each form factor by a sum of four poles. Further publications Kelly \cite{kelly04}, Arrington et al.~\cite{arrington07} and Puckett \cite{puckett10} use a parametrisation satisfying dimensional scaling at high $|t|$. A graphical comparison of these form factors is available in \cite[Figure~1.7]{jan_thesis}.
 
 The Coulomb amplitude and nuclear form factors are implemented in class {\tt CoulombInterference}.
 
@@ -266,7 +270,7 @@ $s$-distributions & \Box{total cross-section $\sigma_{\rm tot}(s)$, rho paramete
 \end{center}
 \end{table}
 
-The are programs to sample many distributions of interest (see the list in Table \ref{tab:dists}): {\tt ElegentXDistributionSampler} where {\tt X} can be {\tt T} for distributions in four-momentum transfer squared, {\tt B} for distributions in impact parameter space or {\tt S} for distributions in cetre-of-mass energy $\sqrt s$. The users' manual for these programs can be found at \cite[Wiki section]{elegent}. There are also scripts ({\tt generate\_x\_distributions}) to generate the distributions at ISR, S$\rm p\bar p$S, RHIC, Tevatron and LHC energies. These distributions are available for download in the ROOT format at the project web page \cite[Distributions section]{elegent}.
+The package includes programs to sample many distributions of interest (see the list in Table \ref{tab:dists}): {\tt ElegentXDistributionSampler} where {\tt X} can be {\tt T} for distributions in four-momentum transfer squared, {\tt B} for distributions in impact parameter or {\tt S} for distributions in centre-of-mass energy $\sqrt s$. The users' manual for these programs can be found at \cite[Wiki section]{elegent}. There are also scripts ({\tt generate\_x\_distributions}) to generate the distributions at ISR, S$\rm p\bar p$S, RHIC, Tevatron and LHC energies. These distributions are available for download in the ROOT format at the project web page \cite[Distributions section]{elegent}.
 
 A cumulative cross-section distribution (sampled by the program mentioned above) can be used for Monte-Carlo generation of elastic nucleon-nucleon scattering events. This functionality is provided by the {\tt Generator} class, which can easily be used in any other program. For an example application see the  {\tt ElegentTest} program.
 
